# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2017-03-25 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Improve Haskell CloudI API socket recv logic
    * Improve Go CloudI API socket recv logic
    * Improve Java CloudI API socket recv logic
    * Update quickrand

2017-03-24 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Remove the CloudI API helper function
      request_http_qs_parse so only the helper function
      info_key_value_parse is used (both functions do the same thing)
      (Erlang requires using cloudi_request_info:key_value_parse/1 instead of
       cloudi_request:http_qs_parse/1)

2017-03-23 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update quickrand
    * Add the messaging integration test in Haskell
    * Improve the OCaml messaging integration test
    * The Haskell CloudI API is now tested

2017-03-22 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add the count integration test in Haskell
    * Add the msg_size integration test in Haskell
    * Add the null integration test in Haskell
    * Updated the CloudI API README

2017-03-21 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add the remaining core logic to Haskell CloudI API
    * Add Forward return values to both the OCaml and Haskell CloudI APIs
      to be similar to the Erlang CloudI API return values
    * Complete the http_req integration test in Haskell

2017-03-20 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Improve OCaml CloudI API internal type usage
    * Add basic callback logic to Haskell CloudI API beginnings
      (currently requires GHC >= 7.10.3)

2017-03-18 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix the Haskell CloudI API beginning to initialize/terminate properly

2017-03-17 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add the beginnings of the http_req Haskell integration test
    * Improve Go and Ocaml integration tests makefiles
